--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptpad",
   "description": "a collaborative office suite that is end-to-end encrypted and open-source",
-  "version": "2025.6.0",
+  "version": "2025.9.0",
   "license": "AGPL-3.0+",
   "repository": {
     "type": "git",
@@ -44,7 +44,7 @@
     "localforage": "^1.5.2",
     "marked": "^4.3.0",
     "mathjax": "3.0.5",
-    "netflux-websocket": "github:cryptpad/netflux-websocket#scalable",
+    "netflux-websocket": "^1.3.0",
     "notp": "^2.0.3",
     "nthen": "0.1.8",
     "open-sans-fontface": "^1.4.0",
